--- a/src/components/PostsList.module.css
+++ b/src/components/PostsList.module.css
@@ -1,5 +1,10 @@
 .posts {
-  margin: 0;
-  padding: 0;
+  margin: 1rem auto;
+  padding: 1rem 0;
+  max-width: 50rem;
   list-style: none;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(3, 30%);
+  justify-content: center;
 }
